--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ winit = { version = "0.30", features = ["android-native-activity"] }
 bytemuck = { version = "1.24", features = ["derive"] }
 tokio = { version = "1.49.0", features = ["full"] }
 rand = "0.9.2"
+clap = { version = "4.5.54", features = ["derive"] }
